--- a/module 1/lesson 3/activity.html
+++ b/module 1/lesson 3/activity.html
@@ -18,14 +18,7 @@
     <br>The goal of Fulki is to awaken and nurture the latent potential of children, create opportunities for the practice
     of various subjects for the purpose of their imagination and intellectual development, and create a joyful human environment for them.
     <br>Fulki takes advantage of any opportunity to interact closely with children, always trying to open up new directions for them whenever possible so that children can develop into effective members of the global society of the future.
-    <br> Currently, <mark>9 projects are being run here - the children's experimental school Sajhapath,</mark> <strong>the children's cultural school Sonartari, the children's science laboratory Galileo and its science club Ananda Bigyan,
-    the children's general library Sukumar and its book reading program Ananda Path, the classical dance education
-    institution Nrityanjali, the physical
-    education institution Karate School, the English language education institution Let's Play with English, the children's
-    story-telling society Golprajya, the pure music practice organization Raktakarabi, in addition to other schools in
-    different districts of the country, integrated educational and cultural programs are being carried out to supplement
-    education. Thus, more than two thousand children and adolescents are directly associated with Fulki as students and
-    about <i>15,000 more school students through integrated programs.</i><strong>
+    <br> Currently,<mark> 9 projects are being run here-the children's experimental school Sajhapath,</mark> <strong>the children's cultural school Sonartari, the children's science laboratory Galileo and its science club Ananda Bigyan, the children's general library Sukumar and its book reading program Ananda Path, the classical dance education institution Nrityanjali, the physical education institution Karate School, the English language education institution Let's Play with English, the children's story-telling society Golprajya, the pure music practice organization Raktakarabi, in addition to other schools in different districts of the country, integrated educational and cultural programs are being carried out to supplement education. Thus, more than two thousand children and adolescents are directly associated with Fulki as students and about <i>15,000 more school students through integrated programs.</i><strong>
     <br><mark>Begum Umartul Fazal, Emeritus Professor Dr. Anisuzzaman, Scientist Professor Jamal Nazrul Islam, Artist Sabih-ul Alam,Historian Dr. Shamsul Hossain, Amit Chanda, Abul Momen, Sheela Momen</mark> and other wise individuals have been and are
     involved in the path of Fulki at various times and in various ways.
     
