--- a/module 1/lesson 2/activity.html
+++ b/module 1/lesson 2/activity.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            html elements
-        </title>
-    </head>
-    <body>
-        <h1>HTML elements</h1>
-        <h2>HTML elements</h2>
-        <h3>HTML elements</h3>
-        <h4>HTML elements</h4>
-        <h5>HTML elements</h5>
-        <h6>HTML elements</h6>
-        <p> <del>Hello,</del> My name is Adwitiya Rajonna. I read in class six. I like to read books. I like to read about science and literature. So far I have read about 20 books. <i> Including; Anna frank's diary, Tom sawyer, The castle, guliver's travel, robinson.</i> <strong><b>I have 3 medals aswell.</b></strong> <sup><em>:D</em></sup> <br> <mark>I like to draw in my free time </mark><sub>:d</sub>  </p>
-    </body>
-</html>
+
+<head>
+    <title>
+        Fulki Sahajpath bidyaloy
+    </title>
+</head>
+<body>
+    <colour><h1>Fulki Sahajpath bidyaloy</h1>
+    'fulki! Fulki!
+    <br> What is fire flower?
+    <br>What is it that you keep your hair open in the courtyard of the sky?
+    <br>There is no fire in the fire.
+    <br>There are flowers, but what are they?Flowers?'</colour>
+    <br> <br><b>Poet Nabanita Debsen</b> sent her best wishes to Fulki in this rhythmic manner. And <b>British poet and translator William Radichi</b> came in person and said with admiration, <mark>'I have never seen such an educational institution even in England.'</mark>
+    <br>By the looks of it, Fulki is now close to fifty. It will complete five decades in 2026.
+    <br>The goal of Fulki is to awaken and nurture the latent potential of children, create opportunities for the practice
+    of various subjects for the purpose of their imagination and intellectual development, and create a joyful human environment for them.
+    <br>Fulki takes advantage of any opportunity to interact closely with children, always trying to open up new directions for them whenever possible so that children can develop into effective members of the global society of the future.
+    <br> Currently,<mark> 9 projects are being run here-the children's experimental school Sajhapath,</mark> <strong>the children's cultural school Sonartari, the children's science laboratory Galileo and its science club Ananda Bigyan, the children's general library Sukumar and its book reading program Ananda Path, the classical dance education institution Nrityanjali, the physical education institution Karate School, the English language education institution Let's Play with English, the children's story-telling society Golprajya, the pure music practice organization Raktakarabi, in addition to other schools in different districts of the country, integrated educational and cultural programs are being carried out to supplement education. Thus, more than two thousand children and adolescents are directly associated with Fulki as students and about <i>15,000 more school students through integrated programs.</i><strong>
+    <br><mark>Begum Umartul Fazal, Emeritus Professor Dr. Anisuzzaman, Scientist Professor Jamal Nazrul Islam, Artist Sabih-ul Alam,Historian Dr. Shamsul Hossain, Amit Chanda, Abul Momen, Sheela Momen</mark> and other wise individuals have been and are
+    involved in the path of Fulki at various times and in various ways.
+    
+   <br><i>Fulki believes that one day, by joining hands with all the children and youth of all classes and castes, Sonar Bangla will become a truly golden country through their honest, beautiful and creative ideas and work.Everyone is welcome to visit the Fulki website to learn about Fulki's projects and its regular events. Everyone is also invited to our open premises.</i>
