--- a/module 1/lesson 3/activity.html
+++ b/module 1/lesson 3/activity.html
@@ -47,7 +47,7 @@
             <li>drawing</li>
             <li>playing roblox with family/friends</li>
             <li>spending time with friends</li>
-            <li>studying (extracurriculum)</li>
+            <li>studying (extracurriculur)</li>
         </ol>
     </body>
 </html>
