--- a/acp/acp 2/activity.html
+++ b/acp/acp 2/activity.html
@@ -13,7 +13,7 @@
         <tr>
             <th>rats</th>
             <th>2-3 years (Domesticated rats)</th> <th>land</th>
-            <th>56</th>
+            <th>56 species</th>
             <tr>
                 <th>Jellyfish</th>
                 <th>a couple months to (theoretically) 66 million years.</th>
