--- a/module 2/lesson 6/activity.html
+++ b/module 2/lesson 6/activity.html
@@ -8,23 +8,28 @@
                 top: 0px;
                 right: 50px;
                 border: 2px solid yellow;
+                opacity: 0.3;
             }
             #relative {
                 position: relative;
                 width: 200px;
                 left: 100px;
                 border: 2px solid green;
+                opacity: 0.6;
             }
             #absolute {
                 position: absolute;
                 left: 50px;
                 border: 2px solid orange;
+                opacity: 0.8;
             }
             #sticky {
                 position: sticky;
                 top: 0px;
                 width: 200px;
                 border: 2px solid red;
+                background-color: aquamarine;
+               opacity : 1;
             }
         </style>
     </head>
