--- a/acp/activity.html
+++ b/acp/activity.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UFT-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>get familiar with the structure</title>
-    </head>
-    <body>
-        <h3>Introduction to <i>HTML</i></h3>
-        HTML = Hyper Text Markup Language
-        <br>hello world
-    </body>
+
+<head>
+    <title>CSS positioning</title>
+    <style>
+        #fixed {
+            position: fixed;
+            top: 0px;
+            right: 50px;
+            border: 2px solid red;
+            opacity: 0.3;
+        }
+
+        #relative {
+            position: relative;
+            width: 200px;
+            left: 100px;
+            border: 2px solid orange;
+            opacity: 0.6;
+        }
+
+        #absolute {
+            position: absolute;
+            left: 50px;
+            border: 2px solid yellow;
+            opacity: 0.8;
+        }
+
+        #sticky {
+            position: sticky;
+            top: 0px;
+            width: 200px;
+            border: 2px solid purple;
+            background-color: cyan;
+            opacity: 1;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>positioning</h1>
+    <div id="fixed">
+        Fixed positioning
+        <div id="relative">
+            Relative positioning
+        </div>
+        <div id="absolute">
+            Absolute positioning
+        </div>
+        <div id="sticky">
+            Sticky positioning
+        </div>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
 </html>
